# ai-driven-network-remediation

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/kind/: action.yaml
.github/workflows/: build-and-push.yaml  pr-checks.yml
contracts/: incident-audit.schema.json  nginx-logs.schema.json
docs/: graph-nodes.md  manual-deploy.md
docs/rest/: rest-commands.md
hub/agent-service/: Containerfile  pyproject.toml
hub/agent-service/src/agent_service/: __init__.py  __main__.py  config.py  graph.py  models.py  server.py  utils.py
hub/agent-service/src/agent_service/kafka/: __init__.py  alerts.py
hub/agent-service/src/agent_service/nodes/: __init__.py  analyze.py  context.py  decide.py  escalate.py  execute.py  ingest.py  normalize.py  notify.py  remediate.py  request_approval.py
hub/agent-service/tests/: helpers.py  test_alert_parsing.py  test_config.py  test_graph.py  test_models.py  test_normalize.py  test_server.py  test_utils.py
hub/chatbot-service/src/chatbot_service/: __init__.py  chat.py  kafka.py  probes.py
hub/chatbot-service/tests/: test_endpoints.py  test_helpers.py
hub/frontend/: Containerfile  FRONTEND.md  nginx.conf
hub/frontend/src/: App.jsx  main.jsx  styles.css
hub/frontend/src/components/: ChatPanel.jsx  DegradedBanner.jsx  ErrorBoundary.jsx  SloPanel.jsx  StatusCards.jsx
hub/frontend/src/hooks/: usePolling.js
hub/helm/: Chart.yaml  values.yaml
hub/helm/charts/minio/: values.yaml
hub/helm/charts/minio/templates/: route.yaml
hub/helm/templates/: _helpers.tpl  agent-service.yaml  frontend.yaml  ingestion-pipeline.yaml  lokistack-config.yaml  mcp-secrets.yaml
hub/infra/aap-mock/: k8s.yaml
hub/infra/autorag/: values.yaml
hub/infra/autorag/templates/: llamastackdistribution.yaml
hub/infra/kafka/: README.md  values.yaml
hub/infra/kafka/templates/: kafka.yaml  topics.yaml
hub/infra/lokistack/chart/: values.yaml
hub/infra/lokistack/chart/templates/: cluster-log-forwarder.yaml  mcp-lokistack-rbac.yaml  test-log-generator.yaml
hub/infra/lokistack/chart/templates/storage/: s3-secret.yaml
hub/infra/minio/: Chart.yaml  values.yaml
hub/infra/minio/templates/: route.yaml  upload-sample-docs.yaml
hub/infra/servicenow-mock/: README.md  k8s.yaml  test_main.py
hub/ingestion-pipeline/: Containerfile  pyproject.toml
hub/ingestion-pipeline/runbooks/: aap-job-failure.md  certificate-expired.md  dns-failure.md  kafka-consumer-lag.md  network-timeout.md  nginx-config-error.md  nginx-crashloop.md  nginx-oomkilled.md  postgres-connection-pool.md  storage-full.md
hub/ingestion-pipeline/src/ingestion_pipeline/: __init__.py  app.py  config.py
hub/ingestion-pipeline/src/ingestion_pipeline/clients/: llamastack.py  minio.py
hub/integration-tests/: pyproject.toml
hub/integration-tests/tests/agent_service/: conftest.py  test_health.py  test_remediate.py
hub/integration-tests/tests/autorag/: conftest.py  helpers.py  test_autorag_stack.py  test_autorag_vector_io.py  test_ingestion_rag_path.py  test_rag_e2e.py
hub/integration-tests/tests/chatbot_service/: test_bff.py
hub/integration-tests/tests/ingestion_pipeline/: conftest.py  test_llamastack_toolgroups.py  test_models.py
hub/integration-tests/tests/mcp_servers/: conftest.py  test_health.py  test_kafka_tools.py  test_lokistack_tools.py  test_openshift_tools.py
hub/mcp-servers/: Containerfile  Containerfile.openshift
hub/mcp-servers/mcp-aap/: README.md  pyproject.toml
hub/mcp-servers/mcp-aap/src/mcp_aap/: __init__.py  server.py  tools.py
hub/mcp-servers/mcp-aap/tests/: test_tools.py
hub/mcp-servers/mcp-kafka/: README.md  pyproject.toml
hub/mcp-servers/mcp-kafka/src/mcp_kafka/: __init__.py  config.py  server.py  tools.py  utils.py  validators.py
hub/mcp-servers/mcp-kafka/tests/: conftest.py  test_server.py  test_tools.py  test_utils.py  test_validators.py
hub/mcp-servers/mcp-lokistack/: pyproject.toml
hub/mcp-servers/mcp-lokistack/src/mcp_lokistack/: __init__.py  _helpers.py  client.py  config.py  formatters.py  server.py  tools.py  tools_metrics.py  tools_patterns.py  tools_search.py  validators.py
hub/mcp-servers/mcp-lokistack/tests/: conftest.py  test_client.py  test_config.py  test_formatters.py  test_server.py  test_tools.py  test_validators.py
hub/mcp-servers/mcp-openshift/: pyproject.toml
hub/mcp-servers/mcp-openshift/deploy/: edge-rbac.yaml  setup-edge-rbac.sh
hub/mcp-servers/mcp-openshift/src/mcp_openshift/: __init__.py  config.py  server.py  tools.py
hub/mcp-servers/mcp-openshift/tests/: test_tools.py
hub/mcp-servers/mcp-servicenow/: README.md  pyproject.toml
hub/mcp-servers/mcp-servicenow/src/mcp_servicenow/: __init__.py  server.py  tools.py
hub/mcp-servers/mcp-slack/src/mcp_slack/: __init__.py  server.py  tools.py
scripts/ci/: install-openshift-ai.sh
scripts/local/: deploy-with-custom-image.sh
