[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-driven-network-remediation"
version = "0.1.0"
description = "AI-driven self-healing for distributed edge infrastructure using Red Hat OpenShift AI and Ansible Automation Platform"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Red Hat AI Quickstarts", email = "ai-quickstarts@redhat.com"}
]
keywords = [
    "ai",
    "network-operations",
    "edge-computing",
    "ansible",
    "langgraph",
    "granite",
    "openshift",
    "incident-response"
]

requires-python = ">=3.13"

dependencies = [
    # AI & LLM Framework
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",

    # Model Serving
    "openai>=1.40.0",  # For vLLM OpenAI-compatible API

    # Event Streaming
    "kafka-python-ng>=2.2",

    # Database
    "psycopg>=3.1.0",           # PostgreSQL driver
    "psycopg2-binary>=2.9.0",   # Legacy PostgreSQL driver
    "pgvector>=0.2.0",          # pgvector Python client
    "sqlalchemy>=2.0.0",        # ORM

    # Vector Search & RAG
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",

    # MCP (Model Context Protocol)
    "mcp>=0.8.0",
    "mcp-server-base>=0.8.0",

    # Observability
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.39b0",
    "prometheus-client>=0.18.0",

    # API & Web
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "requests>=2.30.0",

    # Data Processing
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",

    # Utilities
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "click>=8.1.0",

    # Serialization
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.3.0",
    "flake8>=7.0.0",
    "flake8-pyproject>=1.2.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

dashboard = [
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
]

testing = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=3.7.0",  # For container-based tests
]

[project.urls]
Homepage = "https://github.com/rh-ai-quickstart/ai-driven-network-remediation"
Documentation = "https://github.com/rh-ai-quickstart/ai-driven-network-remediation/blob/main/README.md"
Repository = "https://github.com/rh-ai-quickstart/ai-driven-network-remediation.git"
Issues = "https://github.com/rh-ai-quickstart/ai-driven-network-remediation/issues"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".git", "__pycache__", ".venv"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
exclude = [".git", "__pycache__", ".venv", "build", "dist"]
ignore = ["E501", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.isort]
profile = "black"
known_first_party = ["agent_service"]
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--cov=services --cov-report=html --cov-report=term-missing"
