[project]
name = "integration-tests"
version = "0.0.1"
description = "Integration tests for the hub component"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-rerunfailures>=15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring deployed services",
    "e2e: end-to-end tests requiring full RAG stack",
]
