[project]
name = "mcp-openshift"
version = "0.1.0"
description = "MCP server exposing OpenShift operations as tools for the AI remediation agent"
authors = [
    { name = "rh-ai-quickstart" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.23",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
mcp-openshift = "mcp_openshift:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
