[project]
name = "mcp-servicenow"
version = "0.1.0"
description = "MCP server wrapping the ServiceNow REST API for the AI remediation agent"
readme = "README.md"
authors = [
    { name = "rh-ai-quickstart" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.23",
    "httpx>=0.28",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
mcp-servicenow = "mcp_servicenow:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
